tests/paczka1/small_fuzzy/38694714.err
Error in line 6: YWT9i0ek7 S416 476,2
Error in line 9: ojZ S485 94,6
Error in line 15: S752 A437 0,3
